[package]
name = "perf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["json-output"]
# Allow for json output from the perf client
json-output = ["serde", "serde_json"]

[dependencies]
# Remove the `provider-tls-default` feature and add `provider-tls-rustls`
s2n-quic = { version = "1", path = "../../quic/s2n-quic", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.22"
hdrhistogram = { version = "7.2", default-features = false }
rcgen = "0.9.1"
rustls = { version = "0.20", default-features = false, features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.0"
serde = { version = "1.0", features = ["derive"], optional = true  }
serde_json = { version = "1.0", optional = true }
socket2 = "0.4"
webpki = "0.22"
clap = { version = "3.2", features = ["derive"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
bytes = "1"

[workspace]
members = ["."]
